--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "css-reset-and-normalize-sass": "^0.1.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "nicescroll": "^3.7.4",
     "popper.js": "^1.12.3"
